--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -16,3 +16,16 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+/* In global.css or another global stylesheet */
+body {
+  background-color: #0083ce;
+}
+
+p {
+  font-family: "Comic Neue", cursive !important;
+}
+
+section{
+  background-color: #ffffff;
+
+}
